--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "main": "build/bundle.js",
   "scripts": {
-    "start": "webpack && webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-loader": "^1.6.1",
@@ -31,6 +32,6 @@
     "vr"
   ],
   "dependencies": {
-    "aframe": "^0.4.1"
+    "aframe": "^0.5.0"
   }
 }
